--- a/style/style.css
+++ b/style/style.css
@@ -597,13 +597,11 @@ textarea::-webkit-scrollbar {
   justify-content: center;
   position: absolute;
   left: 20px;
-  top: 15px;
+  top: 50px;
   padding: 0;
   border: none;
   background: none;
   cursor: pointer;
-  background-color: transparent;
-  z-index: 1000;
 }
 
 .menu-btn__inner {
@@ -611,7 +609,7 @@ textarea::-webkit-scrollbar {
   background: none;
   border: none;
   padding-left: 20px;
-  padding-top: 15px;
+  padding-top: 50px;
   display: none;
 }
 
@@ -961,15 +959,29 @@ textarea::-webkit-scrollbar {
   .header__social-item {
     padding-left: 80px;
   }
-  .header__social-item img {
+  /* .header__social-item img {
     width: 40px;
     height: 40px;
+  } */
+
+  .header__social-link svg {
+    width: 37px;
+    height: 37px;
+  }
+  /* .header__social-link {
+    filter: brightness(0) saturate(100%) invert(100%);
+  } */
+
+  .header__social-link svg path {
+    fill-opacity: 1;
+    fill: #fff;
   }
 
   .header__main-inner {
     position: absolute;
     left: -70px;
-    top: 90px;
+    top: 110px;
+    /* top: 90px; */
   }
 
   .header__main-title {
