--- a/style/style.css
+++ b/style/style.css
@@ -344,16 +344,11 @@ input:focus,
   transform: rotate(-90deg);
 }
 
-/* .modal {
-  display: none;
-  position: fixed;
-  z-index: 1000;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  overflow: auto;
-  background-color: rgba(0, 0, 0, 0.8);
+/* .test {
+  position: relative;
+  width: 500px;
+  height: 150px;
+  overflow: hidden;
 }
 
 .modal-content {
